/***********************************************************************
X3 ChangeLog

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Updated user_matches_glob.

	* src/common.h: Updated user_matches_glob.

	* src/mod-memoserv.c: Updated user_matches_glob.

	* src/nickserv.c: Updated user_matches_glob.

	* src/opserv.c Updated user_matches_glob.

	* src/tools.c: Added support for shared channel bans (j). As well as
	quiet bans. Although these are handled ircd side.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/tools.c: Extended channel ban support. As well as text and
	nick change bans, however these 2 are just ignored as they are
	handled ircd side.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/tools.c: Extended account ban support.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Basic extended ban support.

	* src/tools.c: Basic extended ban support.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed up SF bug #2799155.

	* src/modcmd.c: Fixed up an issue where missing args was coming up
	when it shouldnt.

2009-05-31  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* GPL 3 and svn propset updates.

2009-05-31  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/main.c: Added spamserv.h #include.

	* src/main-common.c: Woops forgot to init spamserv.

	* src/spamserv.c: Fixed up AddLocalUser.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Small fix with CSMSG_SET_UNREVIEWED.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.c: Couple of tweaks.

	* src/proto-common.c: Fix for triggers not working with forwards as well as
	off channel services.

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a crash with setting a .set option with an invalid
	option.

	* src/mail-smtp.c: Added missing file.

2009-05-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
